# proyecto-final-procurement

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  trivy-report-api.txt  trivy-report-vllm.txt
.github/workflows/: deploy.yml
app/: main.py
app/agents/: compliance_audit_agent.py  legal_analysis_agent.py  procurement_agent.py  proposal_generation_agent.py  supervisor_agent.py
app/core/: agent_metrics.py  config.py  exceptions.py  llm_factory.py  logging.py  metrics.py  tracing.py
app/middleware/: metrics_middleware.py
app/rag/: pipeline.py
app/services/: chunking_service.py  context_handler.py  document_parser_service.py  embedding_service.py  guardrail_service.py  inference_router.py
docker/backend/: Dockerfile
docker/embeddings/: Dockerfile  main.py  requirements.txt
docker/frontend/: Dockerfile
docker/vllm/: Dockerfile
docs/: arquitectura.md  autoscaling.md  calculo_costos.md  diagramas.md  dockerfiles.md  guia_administrador.md  guia_usuario.md  helm_charts.md  patrones_llm.md  problemas_mitigaciones.md  resultados_pruebas.md  yamls.md
frontend/: .env.local  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/components/: Card.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/lib/: api.ts  types.ts
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  tfplan  variables.tf
k6/scripts/: benchmark.js  (+7 more)
scripts/: fase02_migration.sql  init_db.sql
worker/: main.py
(+156 files in other folders)
